@@ -95,6 +95,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #7990: dir() on ElementTree.Element now lists properties: "tag",
+  "text", "tail" and "attrib".  Original patch by Santoso Wijaya.
+
 - Issue #25725: Fixed a reference leak in pickle.loads() when unpickling
   invalid data including tuple instructions.
 
